--- a/index.html
+++ b/index.html
@@ -17,21 +17,47 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Rating state start -->
+    <main>
+      <div class="container flex-grp">
+        <div class="star-section">
+          <img src="images/icon-star.svg" alt="star" />
+        </div>
 
-    How did we do? Please let us know how we did with your support request. All
-    feedback is appreciated to help us improve our offering! 1 2 3 4 5 Submit
+        <h2 class="card-title">How did we do?</h2>
 
-    <!-- Rating state end -->
+        <p class="card-text">
+          Please let us know how we did with your support request. All feedback
+          is appreciated to help us improve our offering!
+        </p>
 
-    <!-- Thank you state start -->
+        <div class="ratings">
+          <span><button class="btn">1</button></span>
+          <span><button class="btn">2</button></span>
+          <span><button class="btn">3</button></span>
+          <span><button class="btn">4</button></span>
+          <span><button class="btn">5</button></span>
+        </div>
 
-    You selected
-    <!-- Add rating here -->
-    out of 5 Thank you! We appreciate you taking the time to give a rating. If
-    you ever need more support, don’t hesitate to get in touch!
+        <button class="button">Submit</button>
+      </div>
 
-    <!-- Thank you state end -->
+      <div class="thank-container hidden">
+        <div class="card-img">
+          <img src="images/illustration-thank-you.svg" alt="thank-you" />
+        </div>
+
+        <p class="selection-msg">
+          You selected <span id="rate"></span> out of 5
+        </p>
+
+        <h1 class="greeting">Thank you!</h1>
+
+        <p class="thank-text">
+          We appreciate you taking the time to give a rating. If you ever need
+          more support, don’t hesitate to get in touch!
+        </p>
+      </div>
+    </main>
 
     <div class="attribution">
       Challenge by
@@ -40,4 +66,6 @@
       >. Coded by <a href="#">Prototype</a>.
     </div>
   </body>
+
+  <script src="index.js"></script>
 </html>
